<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_guide"
            android:title="@string/menu_guide" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_history"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_share"
            android:title="@string/menu_share" />
    </group>

    <item android:title="@string/information">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/about"
                android:title="@string/menu_about" />
            <item
                android:id="@+id/nav_privacy"
                android:icon="@drawable/privacy"
                android:title="@string/menu_privacy" />
        </menu>
    </item>

</menu>
