<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frag_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_teal_200_color_code"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- top toolbar -->
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/material_teal_a700_color_code"
            android:minHeight="?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

        <!-- top toolbar shadow -->
        <View
            android:id="@+id/toolbar_shadow"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@drawable/toolbar_shadow" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        android:orientation="vertical">

        <!-- row 1; service percent -->
        <RelativeLayout
            android:id="@+id/row_a"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_meta_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/txt_percent_default"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_18"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
                android:layout_toEndOf="@+id/tv_meta_percent"
                android:layout_toRightOf="@id/tv_meta_percent"
                android:text="@string/txt_service"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_18" />

            <TextView
                android:id="@+id/tv_meta_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/tv_service"
                android:layout_toRightOf="@id/tv_service"
                android:text="@string/txt_good"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_22"
                android:textStyle="bold|italic" />

        </RelativeLayout>

        <!-- row 2; rating stars -->
        <include
            android:id="@+id/row_b"
            layout="@layout/rating_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/row_a"
            android:layout_marginTop="7dp" />

        <!-- row 3; bill amount -->
        <LinearLayout
            android:id="@+id/row_c"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/row_b"
            android:layout_marginTop="7dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/tv_bill"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.5"
                android:text="@string/txt_bill"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_18" />

            <EditText
                android:id="@+id/edt_bill"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="right|end"
                android:hint="@string/txt_hint_dollar"
                android:inputType="numberDecimal"
                android:maxLength="10"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/font_size_18">

                <requestFocus />
            </EditText>

        </LinearLayout>

        <!-- row 4; tip amount -->
        <RelativeLayout
            android:id="@+id/row_d"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/row_c"
            android:layout_marginTop="7dp">

            <TextView
                android:id="@+id/tv_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/txt_tip"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_18" />

            <TextView
                android:id="@+id/tv_meta_tip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/tv_tip"
                android:layout_toLeftOf="@+id/tv_round"
                android:layout_toRightOf="@id/tv_tip"
                android:layout_toStartOf="@+id/tv_round"
                android:maxLines="1"
                android:text="@string/txt_hint_dollar"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_18"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_round"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_toLeftOf="@+id/switch_round_off"
                android:layout_toStartOf="@+id/switch_round_off"
                android:text="@string/txt_round_off"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_18" />

            <Switch
                android:id="@+id/switch_round_off"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp" />

        </RelativeLayout>

        <!-- row 5; shared by -->
        <RelativeLayout
            android:id="@+id/row_e"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/row_d"
            android:layout_marginTop="7dp">

            <TextView
                android:id="@+id/tv_shared"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/txt_shared"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_18" />

            <TextView
                android:id="@+id/tv_meta_shared_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/tv_shared"
                android:layout_toRightOf="@id/tv_shared"
                android:maxLines="1"
                android:minEms="2"
                android:text="@string/txt_num"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_18"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_dec"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/custom_button"
                android:text="@string/btn_dec"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_18"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_inc"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:layout_toLeftOf="@id/btn_dec"
                android:layout_toStartOf="@+id/btn_dec"
                android:background="@drawable/custom_button"
                android:text="@string/btn_inc"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_18"
                android:textStyle="bold" />

        </RelativeLayout>

        <!-- row 6; each person pays -->
        <LinearLayout
            android:id="@+id/row_f"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/row_e"
            android:layout_marginTop="7dp"
            android:gravity="center_vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/tv_person"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/txt_person"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_18" />

            <TextView
                android:id="@+id/tv_meta_person"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="right|end"
                android:maxLines="1"
                android:text="@string/txt_hint_dollar"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_18"
                android:textStyle="bold" />

        </LinearLayout>

        <!-- row 7; total bill amount -->
        <LinearLayout
            android:id="@+id/row_g"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/row_f"
            android:layout_marginTop="7dp"
            android:gravity="center_vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/tv_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/txt_total"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_18" />

            <TextView
                android:id="@+id/tv_meta_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="right|end"
                android:maxLines="1"
                android:text="@string/txt_hint_dollar"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_18"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- row 8; clear -->
        <Button
            android:id="@+id/btn_clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/row_g"
            android:layout_centerInParent="true"
            android:layout_marginTop="14dp"
            android:background="@drawable/custom_button"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/btn_clear"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_18"
            android:textStyle="bold" />

    </RelativeLayout>

    <!-- ad banner -->
    <com.google.android.gms.ads.AdView
        android:id="@+id/ad_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-8397256122648968/7826518012" />

</RelativeLayout>