<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/blue_teal"
    android:layout_height="match_parent">

    <include
        layout="@layout/fragment_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- description text -->
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:gravity="center"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_24" />

        <TextView
            android:id="@+id/tv_app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_16" />

        <TextView
            android:id="@+id/tv_copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/copyright_year"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_18" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/about_desc"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_18" />

    </LinearLayout>

    <!-- social media -->
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:weightSum="1"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_fb"
            android:layout_width="60dp"
            android:layout_weight="0.25"
            android:src="@drawable/fb_02"
            android:layout_height="60dp" />

        <ImageView
            android:id="@+id/iv_twitter"
            android:layout_width="60dp"
            android:layout_weight="0.25"
            android:src="@drawable/twitter_02"
            android:layout_height="60dp" />

        <ImageView
            android:id="@+id/iv_linkedin"
            android:layout_weight="0.5"
            android:layout_width="wrap_content"
            android:src="@drawable/linkedin_01"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>